// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`excel-formula-parser array formula allow @ and # 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'prefix-exp',
      'children': [
        {
          'text': '@',
          'token': '@',
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2
        },
        {
          'symbol': 'function',
          'children': [
            {
              'text': 'sum',
              'token': 'FUNCTION',
              'start': 1,
              'end': 4,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 2,
              'lastColumn': 5
            },
            {
              'text': '(',
              'token': '(',
              'start': 4,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 6
            },
            {
              'symbol': 'prefix-exp',
              'children': [
                {
                  'text': '@',
                  'token': '@',
                  'start': 5,
                  'end': 6,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 6,
                  'lastColumn': 7
                },
                {
                  'symbol': 'intersect-reference',
                  'children': [
                    {
                      'text': 'a1:a2',
                      'token': 'CELL',
                      'start': 6,
                      'end': 11,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 12
                    },
                    {
                      'text': 'a3#',
                      'token': 'CELL',
                      'start': 12,
                      'end': 15,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 13,
                      'lastColumn': 16
                    }
                  ],
                  'start': 6,
                  'end': 15,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 7,
                  'lastColumn': 16
                }
              ],
              'start': 5,
              'firstLine': 1,
              'firstColumn': 6
            },
            {
              'text': ')',
              'token': ')',
              'start': 15,
              'end': 16,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 16,
              'lastColumn': 17
            }
          ],
          'start': 1,
          'end': 16,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 17
        }
      ],
      'start': 0,
      'end': 16,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 17
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`excel-formula-parser structure reference works 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'sum',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'symbol': 'arguments',
          'children': [
            {
              'symbol': 'structure-reference',
              'children': [
                {
                  'text': 't',
                  'token': 'TABLE_NAME',
                  'start': 4,
                  'end': 5,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 5,
                  'lastColumn': 6
                },
                {
                  'symbol': 'table-specifier',
                  'children': [
                    {
                      'text': '[',
                      'token': '[',
                      'start': 5,
                      'end': 6,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 6,
                      'lastColumn': 7
                    },
                    {
                      'symbol': 'table-column-specifier',
                      'children': [
                        {
                          'text': '[#total]',
                          'token': 'TABLE_ITEM_SPECIFIER',
                          'start': 6,
                          'end': 14,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 7,
                          'lastColumn': 15
                        },
                        {
                          'text': ',',
                          'token': 'SPECIFIER_SEPARATOR',
                          'start': 14,
                          'end': 15,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 15,
                          'lastColumn': 16
                        },
                        {
                          'text': '[y]',
                          'token': 'TABLE_COLUMN_SPECIFIER',
                          'start': 15,
                          'end': 18,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 16,
                          'lastColumn': 19
                        }
                      ],
                      'start': 6,
                      'end': 18,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 7,
                      'lastColumn': 19
                    },
                    {
                      'text': ']',
                      'token': ']',
                      'start': 18,
                      'end': 19,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 19,
                      'lastColumn': 20
                    }
                  ],
                  'start': 5,
                  'end': 19,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 6,
                  'lastColumn': 20
                }
              ],
              'start': 4,
              'end': 19,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 20
            },
            {
              'text': ',',
              'token': 'ARGUMENT_SEPARATOR',
              'start': 19,
              'end': 20,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 20,
              'lastColumn': 21
            },
            {
              'symbol': 'structure-reference',
              'children': [
                {
                  'text': 't',
                  'token': 'TABLE_NAME',
                  'start': 20,
                  'end': 21,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 21,
                  'lastColumn': 22
                },
                {
                  'symbol': 'table-specifier',
                  'children': [
                    {
                      'text': '[',
                      'token': '[',
                      'start': 21,
                      'end': 22,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 22,
                      'lastColumn': 23
                    },
                    {
                      'text': 'x',
                      'token': 'TABLE_COLUMN_SPECIFIER',
                      'start': 22,
                      'end': 23,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 23,
                      'lastColumn': 24
                    },
                    {
                      'text': ']',
                      'token': ']',
                      'start': 23,
                      'end': 24,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 24,
                      'lastColumn': 25
                    }
                  ],
                  'start': 21,
                  'end': 24,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 22,
                  'lastColumn': 25
                }
              ],
              'start': 20,
              'end': 24,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 21,
              'lastColumn': 25
            }
          ],
          'start': 4,
          'firstLine': 1,
          'firstColumn': 5
        },
        {
          'text': ')',
          'token': ')',
          'start': 24,
          'end': 25,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 25,
          'lastColumn': 26
        }
      ],
      'start': 0,
      'end': 25,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 26
    }
  ],
  'start': 0,
  'end': 25,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 26
}"
`;

exports[`excel-formula-parser structure reference works for space inside column name 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'structure-reference',
      'children': [
        {
          'text': 't',
          'token': 'TABLE_NAME',
          'start': 0,
          'end': 1,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 2
        },
        {
          'symbol': 'table-specifier',
          'children': [
            {
              'text': '[',
              'token': '[',
              'start': 1,
              'end': 2,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 2,
              'lastColumn': 3
            },
            {
              'text': 'a b',
              'token': 'TABLE_COLUMN_SPECIFIER',
              'start': 2,
              'end': 5,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 3,
              'lastColumn': 6
            },
            {
              'text': ']',
              'token': ']',
              'start': 5,
              'end': 6,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 6,
              'lastColumn': 7
            }
          ],
          'start': 1,
          'end': 6,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 2,
          'lastColumn': 7
        }
      ],
      'start': 0,
      'end': 6,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 7
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`excel-formula-parser structure reference works for thisRow 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'structure-reference',
      'children': [
        {
          'text': 'DeptSales',
          'token': 'TABLE_NAME',
          'start': 0,
          'end': 9,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 10
        },
        {
          'symbol': 'table-specifier',
          'children': [
            {
              'text': '[',
              'token': '[',
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11
            },
            {
              'symbol': 'table-this-row',
              'children': [
                {
                  'text': '@',
                  'token': 'TABLE_@',
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12
                },
                {
                  'text': 'Commission Amount',
                  'token': 'TABLE_COLUMN_SPECIFIER',
                  'start': 11,
                  'end': 28,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 12,
                  'lastColumn': 29
                }
              ],
              'start': 10,
              'end': 28,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 29
            },
            {
              'text': ']',
              'token': ']',
              'start': 28,
              'end': 29,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 29,
              'lastColumn': 30
            }
          ],
          'start': 9,
          'end': 29,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 10,
          'lastColumn': 30
        }
      ],
      'start': 0,
      'end': 29,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 30
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`excel-formula-parser structure reference works for thisRow 2`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'structure-reference',
      'children': [
        {
          'text': 'DeptSales',
          'token': 'TABLE_NAME',
          'start': 0,
          'end': 9,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 10
        },
        {
          'symbol': 'table-specifier',
          'children': [
            {
              'text': '[',
              'token': '[',
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11
            },
            {
              'symbol': 'table-this-row',
              'children': [
                {
                  'text': '@',
                  'token': 'TABLE_@',
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12
                },
                {
                  'text': '[Commission Amount]',
                  'token': 'TABLE_COLUMN_SPECIFIER',
                  'start': 11,
                  'end': 30,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 12,
                  'lastColumn': 31
                }
              ],
              'start': 10,
              'end': 30,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 31
            },
            {
              'text': ']',
              'token': ']',
              'start': 30,
              'end': 31,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 31,
              'lastColumn': 32
            }
          ],
          'start': 9,
          'end': 31,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 10,
          'lastColumn': 32
        }
      ],
      'start': 0,
      'end': 31,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 32
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`excel-formula-parser structure reference works for thisRow 3`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'structure-reference',
      'children': [
        {
          'text': 'DeptSales',
          'token': 'TABLE_NAME',
          'start': 0,
          'end': 9,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 10
        },
        {
          'symbol': 'table-specifier',
          'children': [
            {
              'text': '[',
              'token': '[',
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11
            },
            {
              'symbol': 'table-column-specifier',
              'children': [
                {
                  'text': '[#This Row]',
                  'token': 'TABLE_ITEM_SPECIFIER',
                  'start': 10,
                  'end': 21,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 22
                },
                {
                  'text': ',',
                  'token': 'SPECIFIER_SEPARATOR',
                  'start': 21,
                  'end': 22,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 22,
                  'lastColumn': 23
                },
                {
                  'text': '[Commission Amount]',
                  'token': 'TABLE_COLUMN_SPECIFIER',
                  'start': 23,
                  'end': 42,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 24,
                  'lastColumn': 43
                }
              ],
              'start': 10,
              'end': 42,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 43
            },
            {
              'text': ']',
              'token': ']',
              'start': 42,
              'end': 43,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 43,
              'lastColumn': 44
            }
          ],
          'start': 9,
          'end': 43,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 10,
          'lastColumn': 44
        }
      ],
      'start': 0,
      'end': 43,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 44
    }
  ],
  'start': 0,
  'firstLine': 1,
  'firstColumn': 1
}"
`;

exports[`excel-formula-parser works for 3d reference 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'sum',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'text': 'shee1:sheet2!a1:a2',
          'token': 'CELL',
          'start': 4,
          'end': 22,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 23
        },
        {
          'text': ')',
          'token': ')',
          'start': 22,
          'end': 23,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 23,
          'lastColumn': 24
        }
      ],
      'start': 0,
      'end': 23,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 24
    }
  ],
  'start': 0,
  'end': 23,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 24
}"
`;

exports[`excel-formula-parser works for env 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'sum',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'symbol': 'arguments',
          'children': [
            {
              'text': 'a1:a2',
              'token': 'CELL',
              'start': 4,
              'end': 9,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 10
            },
            {
              'text': ';',
              'token': 'ARGUMENT_SEPARATOR',
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11
            },
            {
              'text': 'b1',
              'token': 'CELL',
              'start': 10,
              'end': 12,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 13
            }
          ],
          'start': 4,
          'end': 12,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 13
        },
        {
          'text': ')',
          'token': ')',
          'start': 12,
          'end': 13,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 13,
          'lastColumn': 14
        }
      ],
      'start': 0,
      'end': 13,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 14
    }
  ],
  'start': 0,
  'end': 13,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 14
}"
`;

exports[`excel-formula-parser works for reference operation 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'SUM',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'symbol': 'atom-exp',
          'children': [
            {
              'symbol': 'union-reference',
              'children': [
                {
                  'text': 'E4:H4',
                  'token': 'CELL',
                  'start': 5,
                  'end': 10,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 6,
                  'lastColumn': 11
                },
                {
                  'text': ',',
                  'token': 'REF_UNION_OPERATOR',
                  'start': 10,
                  'end': 11,
                  'firstLine': 1,
                  'lastLine': 1,
                  'firstColumn': 11,
                  'lastColumn': 12
                },
                {
                  'symbol': 'intersect-reference',
                  'children': [
                    {
                      'symbol': 'expand-reference',
                      'children': [
                        {
                          'text': 'F',
                          'token': 'NAME',
                          'start': 11,
                          'end': 12,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 12,
                          'lastColumn': 13
                        },
                        {
                          'text': ':',
                          'token': 'REF_EXPAND_OPERATOR',
                          'start': 12,
                          'end': 13,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 13,
                          'lastColumn': 14
                        },
                        {
                          'text': 'F',
                          'token': 'NAME',
                          'start': 13,
                          'end': 14,
                          'firstLine': 1,
                          'lastLine': 1,
                          'firstColumn': 14,
                          'lastColumn': 15
                        }
                      ],
                      'start': 11,
                      'end': 14,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 12,
                      'lastColumn': 15
                    },
                    {
                      'text': 'K8',
                      'token': 'CELL',
                      'start': 15,
                      'end': 17,
                      'firstLine': 1,
                      'lastLine': 1,
                      'firstColumn': 16,
                      'lastColumn': 18
                    }
                  ],
                  'end': 17,
                  'lastLine': 1,
                  'lastColumn': 18
                }
              ],
              'start': 5,
              'firstLine': 1,
              'firstColumn': 6
            }
          ]
        },
        {
          'text': ')',
          'token': ')',
          'start': 18,
          'end': 19,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 19,
          'lastColumn': 20
        }
      ],
      'start': 0,
      'end': 19,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 20
    }
  ],
  'start': 0,
  'end': 19,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 20
}"
`;

exports[`excel-formula-parser works for row rangge 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'sum',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'text': '4:5',
          'token': 'CELL',
          'start': 4,
          'end': 7,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 8
        },
        {
          'text': ')',
          'token': ')',
          'start': 7,
          'end': 8,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 8,
          'lastColumn': 9
        }
      ],
      'start': 0,
      'end': 8,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 9
    }
  ],
  'start': 0,
  'end': 8,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 9
}"
`;

exports[`excel-formula-parser works for simple 1`] = `
"{
  'symbol': 'formula',
  'children': [
    {
      'symbol': 'function',
      'children': [
        {
          'text': 'sum',
          'token': 'FUNCTION',
          'start': 0,
          'end': 3,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 1,
          'lastColumn': 4
        },
        {
          'text': '(',
          'token': '(',
          'start': 3,
          'end': 4,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 4,
          'lastColumn': 5
        },
        {
          'symbol': 'arguments',
          'children': [
            {
              'text': 'a1:a2',
              'token': 'CELL',
              'start': 4,
              'end': 9,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 5,
              'lastColumn': 10
            },
            {
              'text': ',',
              'token': 'ARGUMENT_SEPARATOR',
              'start': 9,
              'end': 10,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 10,
              'lastColumn': 11
            },
            {
              'text': 'b1',
              'token': 'CELL',
              'start': 10,
              'end': 12,
              'firstLine': 1,
              'lastLine': 1,
              'firstColumn': 11,
              'lastColumn': 13
            }
          ],
          'start': 4,
          'end': 12,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 5,
          'lastColumn': 13
        },
        {
          'text': ')',
          'token': ')',
          'start': 12,
          'end': 13,
          'firstLine': 1,
          'lastLine': 1,
          'firstColumn': 13,
          'lastColumn': 14
        }
      ],
      'start': 0,
      'end': 13,
      'firstLine': 1,
      'lastLine': 1,
      'firstColumn': 1,
      'lastColumn': 14
    }
  ],
  'start': 0,
  'end': 13,
  'firstLine': 1,
  'lastLine': 1,
  'firstColumn': 1,
  'lastColumn': 14
}"
`;
